<!--  Week #1 Assignment:  GeoQuiz app
       Jesse Jurden
       January 21, 2015
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"/>
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"/>

        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question2_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/choicea_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choicea_button"/>
        <Button
            android:id="@+id/choiceb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceb_button"/>
        <Button
            android:id="@+id/choicec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choicec_button"/>
        <Button
            android:id="@+id/choiced_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiced_button"/>

    </LinearLayout>

</LinearLayout>